# ChangeLog for dev-ruby/acts-as-taggable-on
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*acts-as-taggable-on-2.4.1 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-2.4.1.ebuild:
  Version bump.

*acts-as-taggable-on-2.3.3 (03 Oct 2012)

  03 Oct 2012; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-2.3.3.ebuild, +metadata.xml:
  Initial import.
