@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Jun 2013; Hans de Graaff <graaff@gentoo.org>
+  acts-as-taggable-on-2.4.1.ebuild:
+  Restrict tests due to compatibility issues, but they all pass.
+
 *acts-as-taggable-on-2.4.1 (09 May 2013)
 
   09 May 2013; Hans de Graaff <graaff@gentoo.org>
